<package>
    <name>policy_server</name>
    <version>1.0.0</version>
    <description>
      policy_server has tools to generate a policy from a terrain XYZ file and then answer questions about that policy via MDP. There are two pipelines: policy creation and policy execution
    </description>
    <author>Steve McGuire</author>

    <maintainer email="stephen.mcguire@colorado.edu">Steve McGuire</maintainer>

    <url>http://wiki.ros.org/map_server</url>
    <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>sdl-image</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>yaml-cpp</build_depend>

    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rostest</run_depend>
    <run_depend>sdl-image</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>yaml-cpp</run_depend>

    <test_depend>rospy</test_depend>
</package>
